--- a/003.org
+++ b/003.org
@@ -87,7 +87,7 @@ Gog's cheeks tightened with the suppression of a smile.
 
 In a way, they're similar things; freedom and value. You can use your freedom to get value. Taking away your freedom is like taking value you don't yet have, because 'they' have wrecked your plans. Maybe /you/ want to be a professional banana-talker and charge value for your performances...!"
 
-Both men reacted to this idea with great mirth.
+Both men snickered cynically while also thinking, /that'd be a cool job!/
 
 Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bivouac?"
 
