--- a/003.org
+++ b/003.org
@@ -91,7 +91,7 @@ Both men snickered cynically while also thinking, /that'd be a cool job!/
 
 Gog answered with a question, while smirking gratefully. "Are we really gonna trek it out the whole way through, without a bivouac?"
 
-"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence may or may not shortly cost him /his/ life, sometimes even with a bloody smile that humans easily pick up on. 'Get while the getting is good!', the monkey might say, smacking the words with blood.]."
+"Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of is own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence may or may not shortly cost him /his/ life, or maybe ostracization, sometimes even with a bloody smile that humans easily pick up on. 'Get while the getting is good!', the monkey might say, smacking the words with blood.]."
 
 "That's a palm of walking in the dark in Small Woods."[fn:: The triviality of this observation did not occur to Gog.]
 
