--- a/003.org
+++ b/003.org
@@ -93,9 +93,9 @@ Gog answered with a question, while smirking gratefully. "Are we really gonna tr
 
 "Why not? So long as we hit Snare Plains by maybe one palm after sundown, we'll be set like a murderous monkey[fn:: A strange expression that means something like 'in like Flynn'. It comes from the observation that a monkey that has killed one of its own kind and is relaxing in its nest eating the corpse has a look of complete contentment, as though knowing this once-in-life indulgence may or may not shortly cost him /his/ life, or maybe ostracization, sometimes even with a bloody smile that humans easily pick up on. 'Get while the getting is good!', the monkey might say, smacking the words with blood.]."
 
-"That's a palm of walking in the dark in Small Woods."[fn:: The triviality of this observation did not occur to Gog.]
+"That's three palm of walking in the dark in Small Woods."[fn:: The triviality of this observation did not occur to Gog.]
 
-"Less than one /half/ of one palm, and /running/!", corrected Grav helpfully.
+"Less than /one and one half/ of one palm, and /running/!", corrected Grav helpfully.
 
 Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: xxx make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
 
