--- a/003.org
+++ b/003.org
@@ -97,7 +97,7 @@ Gog answered with a question, while smirking gratefully. "Are we really gonna tr
 
 "Less than /one and one half/ of one palm, and /running/!", corrected Grav helpfully.
 
-Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: xxx make sure naming is consistent and that there has been a footnote already.] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
+Much later, it getting dark and their nearing the end of Small Woods, they encountered a forest-child[fn:: Appendix: forest-child] whose path was intersecting with the only established trail for several palm, as seems always to be the case with the forest-children, and only in the Forest; /any/ Forest, really, but not on a plain for example.
 
 "Greetings cheerful fellow traveler!", said Grav loudly, there never having been any sense of fear about them from anyone that he could recall, and Grav anticipating a reliably predictable sequence of events to follow.
 
