--- a/003.org
+++ b/003.org
@@ -103,7 +103,7 @@ Much later, it getting dark and their nearing the end of Small Woods, they encou
 
 Grav knew his opening comment would be ignored for signs of "foreignness", far from having fact that they were speaking separate languages considered, and also knowing he would not be able to make anything of the traveler's response.
 
-The encounters were always eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
+The bulk of these encounters were eerily similar to one another, and each time it seemed they had to build their pantomime vocabulary with them from scratch. But they were practiced, and both men knew in any case, they'd have to get through the first, rather long part where the forest-child is unaware they do not understand.
 
 And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for toned muscles under the leathery, tough skin, they were what we moderns would call "toddlers".
 
