--- a/003.org
+++ b/003.org
@@ -107,7 +107,7 @@ The bulk of these encounters were eerily similar to one another, and each time i
 
 And for all anyone could tell, a forest-child /was/ a child. It was astonishing. No matter how hard anyone had tried, they couldn't make out any dwarfish features. Other than often being scarred and every so often missing fingers, teeth, eyes, or limbs, and but for toned muscles under the leathery, tough skin, they were what we moderns would call "toddlers".
 
-They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and anyway it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and reeked of whatever weed they smoke.]. He currently stood with the sole of one foot resting on the calf of the other leg, with his spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
+They did not know Crecspeak or anything remotely like it, but were evidently fluent in some kind of language. The small boy[fn:: No one had ever seen a female, and anyway it was always apparent the present company was male in gender.] slouched in a way that a very relaxed, fit, successful older caveman would; a standing slouch that said he could take them or leave them. Or possibly even kill them. But he showed no sense of fear or hatred, just casual toddlerness. They smoked a pipe in about half the cases. This one was not a partaker[fn:: The ones that smoked, really smoked, and somehow seemed reeked of whatever weed they smoke even upwind. They carried along with them a sort of weather system of gnats, flies and stink.]. He currently stood with the sole of one foot resting on the calf of the other leg, with his spear, at least three times his height stuck in the ground and currently serving as just a staff to lean on, ever casually.
 
 And predictably, from appearances, the toddler had not yet considered that the two men might not understand his language. He paused very briefly on occasion in a way that suggested he was baffled by the lack of a response, but continued on just the same.
 
