--- a/003.org
+++ b/003.org
@@ -119,7 +119,7 @@ He made a lot of "we friends" gestures with his hands, his heart, and his mostly
 
 Grav turned to Gog. "How is your forest-child-babble?"
 
-Gog said, "More importantly what do we want to ask him. He's full of helpful answers, all written in High Ancient Balrag. What can we get out of him—then maybe see if he jumps for joy at a polished uvula."
+Gog said, "More importantly what do we want to ask him. He's full of helpful answers, all written in High Ancient Balrag. What can we get out of him?—then maybe see if he jumps for joy at a polished uvula."
 
 Grav looked at the sky through the canopy and thought for a considerable while.
 
