--- a/003.org
+++ b/003.org
@@ -127,7 +127,7 @@ Grav looked at the sky through the canopy and thought for a considerable while.
 
 "Oh. Thanks for starting with an easy one."
 
-The woods, especially near the planes, were a lively hunting ground just as soon as it was dark enough; for all kinds of big, bigger-than-you things made from muscle, teeth and claws. The plain, being a safer place at night, generally, only required you keep a speedy pace and make a lot of noise at intervals. This done, you rarely got messed with.
+The woods, especially near the plains were a lively hunting ground just as soon as it was dark enough; for all kinds of big, bigger-than-you things made from muscle, teeth and claws. The plain, being a safer place at night, generally, only required you keep a speedy pace and make a lot of noise at intervals. This done, you rarely got messed with.
 
 "Don't you think that'd be handy to know?"
 
