--- a/003.org
+++ b/003.org
@@ -135,7 +135,7 @@ The woods, especially near the plains were a lively hunting ground just as soon 
 
 While the men were talking, the forest-child made a series of gestures. "Warning" and "no" and "great death" could be seen on his countenance as he made his interpretive dance.
 
-"Flying?", Gog thought picked up.
+"Flying?", Gog thought he had picked up.
 
 "Mouth? Beak?", Grav tried to help, in this elite-level version of Pictionary, where the audience is more or less dumb, at least from the forest-child's perspective.
 
