--- a/003.org
+++ b/003.org
@@ -137,7 +137,7 @@ While the men were talking, the forest-child made a series of gestures. "Warning
 
 "Flying?", Gog thought he had picked up.
 
-"Mouth? Beak?", Grav tried to help, in this elite-level version of Pictionary, where the audience is more or less dumb, at least from the forest-child's perspective.
+"Mouth? Beak?", Grav tried to help, in this elite version of Pictionary, where the audience is more or less dumb, at least from the forest-child's perspective.
 
 "Is that a tail? Egg?"
 
