--- a/003.org
+++ b/003.org
@@ -143,7 +143,7 @@ While the men were talking, the forest-child made a series of gestures. "Warning
 
 "Lizard bird?", asked Grav.
 
-"I'm pretty sure he is saying lizard-bird something. Egg...could it be eating for two and therefore especially hungry?", asked Gog to Grav, but while making intense eye contact with the forest-child.
+"I'm pretty sure he is saying lizard-bird something. Egg... Could it be eating for two and therefore especially hungry?", Gog asked Grav while making intense eye contact with the forest-child.
 
 His feedback from the toddler was a shrug. Grav made a "big eat-y beak" gesture with his two outstretched arms, perhaps with fingers playing the roll of some hooked teeth at the tips.
 
