--- a/003.org
+++ b/003.org
@@ -157,7 +157,7 @@ Both men fondly recalled this cheerful caveman as they independently began formu
 
 One rare survivor of a lizard-bird attack was widely known for his story and also for his love of life. He labored at sharing his tale in all its horror for the greater good of the Forest[fn:: But most especially for the cavechildren.].
 
-He was known as Caveman Thag and he had been on a continuous speaking tour for generations.[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was only just barely able to speak in a comprehensible manor, even allowing for his slowness at finding words and distance, for he had to be observed closely to catch it all. He could make a word here and there. Crecspeak had an incredible number of words composed of only unvoiced consonants and clicks. Choosing his words with skill allowed him to communicate further. Of course there was a growing vocabulary of signs, but it was all so frustratingly limited. As such, Thag felt in a few cases that he was being growingly surrounded by people who didn't always go to a lot of trouble to /fully/ understand what he was trying to say.]
+He was known as Caveman Thag and he had been on a continuous speaking tour for generations.[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was only just barely able to speak in a comprehensible manor, even allowing for his slowness at finding words and distance, for he had to be observed closely to catch it all. He could make a word here and there. Crecspeak had an incredible number of words composed of only unvoiced consonants and clicks. With practice, choosing his words carefully allowed him to communicate ever more. Of course there was a growing vocabulary of signs, but it was all so frustratingly limited. As such, Thag felt in a few cases that he was being growingly surrounded by people who didn't always go to a lot of trouble to /fully/ understand what he was trying to say.]
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder, shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
