--- a/003.org
+++ b/003.org
@@ -165,13 +165,13 @@ Thag could not speak in a way that would be practical for audiences or scratcher
 
 In his place a man gifted with a loud, engaging, homely voice, who was made as invisible as possible and standing in the most inconspicuous place possible, would make the theater thunder with the confidence of sound lessons learned.
 
-Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was on-cue always.
+Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was always on-cue and practiced at making listeners believe that he was doing the talking, so well timed and smooth was his pantomime.
 
 He would tour any demographic that would benefit, which would most of all be children. They would gather around him as he stood center stage, or whatever served in its place.
 
 He would scare kids straight about lizard-bird awareness.
 
-The voice of Thag began:
+Once at a typical outreach event, the voice of Thag began:
 
 #+begin_quote
 Kids, as you know, my name is Thagalonious Son of Reganold, but you kids know me as Caveman Thag!
