--- a/003.org
+++ b/003.org
@@ -174,7 +174,7 @@ He would scare kids straight about lizard-bird awareness.
 Once at a typical outreach event, the voice of Thag began:
 
 #+begin_quote
-Kids, as you know, my name is Thagalonious Son of Reganold, but you kids know me as Caveman Thag!
+Kids, as you know, my name is Thagalinenus, Son of Rejenold, but you kids know me as Caveman Thag!
 
 And I am so happy to be here. I want to tell you kids about how to be safe, and what to look out for when being lizard-bird-aware!
 #+end_quote
@@ -182,7 +182,7 @@ And I am so happy to be here. I want to tell you kids about how to be safe, and 
 The kids shout aimlessly but with enthusiasm.
 
 #+begin_quote
-Many of you know some of my story, but I'm going to lay it out right here, like a slain lizard-bird, so you can learn from me. Okaay!?
+Many of you know some of my story, but I'm going to lay it /aall/ out right here, like a slain lizard-bird, so you can learn from me. Okaay!?
 #+end_quote
 
 The kids shout again, and Thag points to the ground with his only arm on which there are really only two /sorts/ of fingers.
