--- a/003.org
+++ b/003.org
@@ -210,7 +210,7 @@ The children did not yet know that they should sneer at this. Some adults snicke
 #+begin_quote
 I was minding my own business. I was on my third night, about half way through, as I had to go all that way to make it home after The Season of Industry[fn:: The audience understood two things from this: 1. Thag was working in J'anz-Caves during the foraging off-season for his family's value needs, and 2. It was winter time, as this is the season's name.].
 
-It was not especially bright out that night, as there was only a sliver of moon. The stars where bright where they shone, but there were as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last moment...
+It was not especially bright out that night, as there was only a sliver of moon. The stars where bright where they shone, but there was as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last moment...
 #+end_quote
 
 The children said little but some seemed to be crawling backward using their arms as they sat on the floor; some able to hover their folded legs along like an accomplished yogi.
