--- a/003.org
+++ b/003.org
@@ -213,6 +213,8 @@ I was minding my own business. I was on my third night, about half way through, 
 It was not especially bright out that night, as there was only a sliver of moon. The stars where bright where they shone, but there was as much cloudy sky as not; lots of burrows of sky for a big, mean bird to stay out of view just until the last moment...
 #+end_quote
 
+Thag made a slow sweeping gesture with his one arm.
+
 The children said little but some seemed to be crawling backward using their arms as they sat on the floor; some able to hover their folded legs along like an accomplished yogi.
 
 #+begin_quote
