--- a/003.org
+++ b/003.org
@@ -220,9 +220,9 @@ The children said little but some seemed to be crawling backward using their arm
 #+begin_quote
 I knew that a lizard-bird included this bit of path in its territory. Stories had been going around both caves[fn:: Here the word is used to refer to the two villages, his origin and destination.]. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings.
 
-In the case of the Crec Forest Roads, that make use of so many straight paths, a bird can choose to fly along a straight course, scanning for snacks, for palm at a time, without having to change course. For a lizard-bird, this is a kind of rest. Know that your attacker will have been fully rested.
+In the case of the Crec Forest Roads that make use of so many straight paths, a bird can choose to fly along a straight course, scanning for snacks, for palm at a time, without having to change course. For a lizard-bird, this is a kind of rest. Know that your attacker will have been fully rested.
 
-You my little ones, are just about snacked sized.
+By the way, you, my little ones are just about snacked sized.
 #+end_quote
 
 Thag made swatting motions with his one arm. Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
