--- a/003.org
+++ b/003.org
@@ -222,12 +222,14 @@ I knew that a lizard-bird included this bit of path in its territory. Stories ha
 
 In the case of the Crec Forest Roads that make use of so many straight paths, a bird can choose to fly along a straight course, scanning for snacks, for palm at a time, without having to change course. For a lizard-bird, this is a kind of rest. Know that your attacker will have been fully rested.
 
-By the way, you, my little ones are just about snacked sized.
+By the way, you my little ones are just about snacked sized.
 #+end_quote
 
-Thag made swatting motions with his one arm. Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
+Thag made violent swatting motions with his one arm towards random slices of the audience, this being the best 'great lunging beak' he could muster.
 
-Calling it quits at this point, a quiet-one stepped all over the neighbors behind her; faces, groins, where ever her powerful little hard feet landed. Her brother, having been priming her with fear for days, knew just how to nudge her over the edge from sane calculation and obedience straight into mindless, desperate flight, in this case with a well-timed jab to the ribs.
+Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
+
+Calling it quits at this point, a quiet-one stepped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed. Her brother, having been priming her with fear for days, knew just how to nudge her over the edge from sane calculation and obedience straight into mindless, desperate flight, in this case with a well-timed jab to the ribs.
 
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
