--- a/003.org
+++ b/003.org
@@ -225,7 +225,7 @@ In the case of the Crec Forest Roads that make use of so many straight paths, a 
 By the way, you my little ones are just about snacked sized.
 #+end_quote
 
-Thag made violent swatting motions with his one arm towards random slices of the audience, this being the best 'great lunging beak' he could muster.
+Thag made violent swatting motions with his one arm towards random slices of audience, this being the best 'great lunging beak' he could muster.
 
 Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
 
