--- a/003.org
+++ b/003.org
@@ -227,7 +227,7 @@ By the way, you my little ones are just about snacked sized.
 
 Thag made violent swatting motions with his one arm towards random slices of audience, this being the best 'great lunging beak' he could muster.
 
-Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
+Involuntarily jiggling finger-stumps, while not adding any 'realness', did add to the overall horror of the gesture.
 
 Calling it quits at this point, a quiet-one stepped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed. Her brother, having been priming her with fear for days, knew just how to nudge her over the edge from sane calculation and obedience straight into mindless, desperate flight, in this case with a well-timed jab to the ribs.
 
