--- a/003.org
+++ b/003.org
@@ -229,7 +229,7 @@ Thag made violent swatting motions with his one arm towards random slices of aud
 
 Involuntarily jiggling finger-stumps, while not adding any 'realness', did add to the overall horror of the gesture.
 
-Calling it quits at this point, a quiet-one stepped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed, after which she sprinted out of the theater.
+Calling it quits at this point, a quiet-one stomped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed, after which she sprinted out of the theater.
 
 Her brother, having been priming her with fear for days, knew just how to nudge her over into mindless, frantic flight, in this case with a well-timed jab to the ribs.
 
