--- a/003.org
+++ b/003.org
@@ -231,7 +231,7 @@ Involuntarily jiggling finger-stumps, while not adding any 'realness', did add t
 
 Calling it quits at this point, a quiet-one stomped all over the neighbors behind her: faces, groins, where ever her powerful little hard feet landed, after which she sprinted out of the theater.
 
-Her brother, having been priming her with fear for days knew just how to nudge her over into mindless, frantic flight, in this case with a well-timed jab to the ribs.
+Her brother, having been priming her with fear for days knew just how to nudge her over into mindless, frantic flight. In this case it was with a well-timed jab to the ribs.
 
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
