--- a/003.org
+++ b/003.org
@@ -236,9 +236,9 @@ Her brother, having been priming her with fear for days knew just how to nudge h
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
 #+begin_quote
-It was known then, and it is known still that these places are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something no one could even present a theory for. But clear day or not, someone would eventually witness the bleating goat get in a drop-stone by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there.] I was quite at ease, and walking in the middle of the path. I was sick-monkey by the straightness of the long road and by fatigue.
+It was known then, and it is known still that these places are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something about which no one could even present a theory. But clear day or not, someone would eventually witness the bleating goat get violently tackled by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there. Overcast days would go by when suddenly one day, an audible crash would startle the observer into attention. The goat was often dead before one's eyes could focus on what was happening.] I was quite at ease, and walking in the middle of the path. I was sick-monkey by the straightness of the long road and by fatigue.
 
-Kids, I was counting on the clouds to protect me! We know that's wrong. What do we say about clouds and lizard-bird safety?
+Kids, I was counting on the clouds to protect me, although I didn't think of it that way at the time! We know that's wrong. What do we say about clouds and lizard-bird safety?
 #+end_quote
 
 This time, the knowing audience chanted along with Thag as he waived out the syllables.
