--- a/003.org
+++ b/003.org
@@ -245,7 +245,7 @@ This time, the knowing audience chanted along with Thag as he waived out the syl
 
 "**/Don't Let Clouds Fool Ya!/**"
 
-It was simple and memorable. That was the point. /Some of the adults in the audience have difficulty with much simpler concepts./ Thag thought.
+It was simple and memorable. That was the point. /Some of the adults in the audience have difficulty with much simpler concepts/, thought Thag.
 
 Thag's voice made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice at /performing/ the screech. The sound could not be credited to him, but Thag knew there was a sort of "symphony" taking place; plenty of talented cavepeople involved at all levels. And in any case, even perceptive adults just a all-finger rows back were unsure where the voice came from.].
 
