--- a/003.org
+++ b/003.org
@@ -251,7 +251,7 @@ Thag's voice made a practiced, convincing lizard-bird screech[fn:: A call absolu
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser. The scat-er was immediately giggling and dancing soon enough. As the performance went on, feces became ever less a concern for this enraptured Caveman Thag audience.
 
-And children were hopeless in communicating something like what they had just experienced.
+Children were hopeless in communicating something like what they had just experienced.
 
 They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasions they might share an important lesson learned.
 
