--- a/003.org
+++ b/003.org
@@ -257,7 +257,7 @@ They could excitedly talk to their friends in other parts, relaying the exciteme
 
 Children frequently got a wave of buzz ahead of Thag's visits. But no one was ever prepared for the first screech.
 
-This was always a genuine surprise and Thag loved it. Thag worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in the value he brought. Thag had to admit he would be hard to replace, surely with disappointing results. He had both the booming voice of authority and the screech of crazed terror.
+This was always a genuine surprise and Thag loved it. Thag worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in the value he brought. Thag had to admit it would be hard to replace, surely with disappointing results. He had both the booming voice of authority and the screech of crazed terror.
 
 #+begin_quote
 I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
