--- a/003.org
+++ b/003.org
@@ -260,7 +260,7 @@ Children frequently got a wave of buzz ahead of Thag's visits. But no one was ev
 This was always a genuine surprise and Thag loved it. Thag worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in the value he brought. Thag had to admit, Jurd would be hard to replace, and surely with disappointing results if it ever came to that. He had both the booming voice of authority and the screech of crazed terror.
 
 #+begin_quote
-I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+I would only very rarely think about danger. I'd walk to the side under the canopy, or maybe turn my head and look on rare occasion.
 
 But I was not usually even this careful.
 #+end_quote
