--- a/003.org
+++ b/003.org
@@ -267,15 +267,15 @@ But I was not usually even this careful.
 
 Jurd knew to watch Thag carefully at this point, using his master's subtle cues to decide when to resume, beginning the real drama in Thag's story.
 
-He began again in what stood in for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away.
+He began again in what stood in for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away. Thag's voice continued.
 
 #+begin_quote
-Then it came.
-
+And then she came.
 #+end_quote
-There was a random unaccountable juvenile snicker.
-#+begin_quote
 
+There was a random unaccountable juvenile snicker.
+
+#+begin_quote
 I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More, any place where play takes place.], but was no match for a lizard-bird.
 #+end_quote
 
