--- a/003.org
+++ b/003.org
@@ -273,7 +273,7 @@ Thag's voice began again in what stood in for a "quiet" voice in the enormous hi
 And then she came.
 #+end_quote
 
-There was a random unaccountable juvenile snicker.
+There was a random unaccountable snicker toward the back of the theater.
 
 #+begin_quote
 I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More, any place where play takes place.], but was no match for a lizard-bird.
