--- a/003.org
+++ b/003.org
@@ -281,7 +281,7 @@ I am unable to puzzle together any of what took place behind me of course, as I 
 
 Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: Carefully; sometimes, often, disastrously. You could end up with more champagne than you anticipated. At this he was truly practiced, for if his cues changed in ways that were hard for Jurd to read, the performance suffered.
 
-But it was true that Thag was afraid of lizard-bird still, in a way that makes your arachnophobia seem well-considered and rational.
+But it was true that Thag was afraid of lizard-bird still in a way that makes garden variety arachnophobia seem well-considered and rational.
 
 This time too, Thag had to snap out of it and continued his outreach in the most productive way possible, as always.
 
