--- a/003.org
+++ b/003.org
@@ -283,7 +283,7 @@ Thag always had legitimate lament he could tap into at any time to bring the moo
 
 But it was true that Thag was afraid of lizard-bird still in a way that makes garden variety arachnophobia seem well-considered and rational.
 
-This time too, Thag had to snap out of it and continued his outreach in the most productive way possible, as always.
+This time too, Thag had to snap out of it and continue his outreach in the most productive way possible, as always.
 
 #+begin_quote
 I was tackled from behind in a way that felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; this only the beginning of its horror.
