--- a/003.org
+++ b/003.org
@@ -291,7 +291,7 @@ I was tackled from behind in a way that felt like being stabbed from behind by s
 She rode me like a hill-sled for probably four man; talons squeezing as we slid. By the time we stopped I felt like I had been wrapped in obsidian-vine[fn:: A vine that grows throughout the Crec realm. If carefully removed and uncoiled (which was obviously a dangerous art) from its host trees, which may be many, and then lightly fire-hardened. It could become a kind of barbed wire. But with pinkie-thumb sized, needle-pointed barbs.], with several powerful men wrapping it ever-tighter around me. You don't know what it feels like to be mercilessly /squeezed/ by something so terrible...
 #+end_quote
 
-Thag trailed off, eyes empty. The children continued to watch until he shook himself and continued.
+Thag trailed off, eyes empty. This was an impressive piece of seemingly impromptu emoting. The children continued to watch until he shook himself and continued.
 
 #+begin_quote
 It was standing on top of me. And it was /heavy/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
