--- a/003.org
+++ b/003.org
@@ -294,7 +294,7 @@ She rode me like a hill-sled for probably four man; talons squeezing as we slid.
 Thag trailed off, eyes empty. This was an impressive piece of seemingly impromptu emoting by the duo. The children continued to watch until he shook himself and the voice continued.
 
 #+begin_quote
-It was standing on top of me. And it was /heavy/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
+She was standing on top of me. And she was /heavy/. It was at least a good sized hyena's weight. As I struggled in a way only one in that situation can truly struggle, it would lift me about a palm with its wings, and then /slam/ me against the ground with all of its weight, making the talons as secure as possible... /in me/!
 #+end_quote
 
 The speaker paused only briefly this time.
