--- a/Spoilers.org
+++ b/Spoilers.org
@@ -121,6 +121,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Ephemeral Notes
 
+- Lizard-bird account: it/he used variously. "she"?
 - Could/should Verk meet up with G&G on their travels to/from clubbing?
 - Some places to keep up with:
   - J'anz-Caves: Where Thag was walking FROM
