--- a/003.org
+++ b/003.org
@@ -300,7 +300,7 @@ She was standing on top of me. And she was /heavy/; at least a good sized hyena'
 The speaker paused only briefly this time.
 
 #+begin_quote
-Once it was sure it had a good hold of me, I guess it wanted to make sure I was as dead as possible so I wouldn't be much trouble on the flight home, wherever that was. To this end he pecked me in the head repeatedly. I turned my head so he would be unable to peck the same place twice, if possible, and twisted all around to try and keep the blows from landing as much as possible.
+Once it was sure it had a good hold of me, I guess it wanted to make sure I was as dead as possible so I wouldn't be much trouble on the flight home, wherever that was. To this end she pecked me in the head repeatedly. I turned my head so he would be unable to peck the same place twice, if possible, and twisted all around to try and keep the blows from landing as much as possible.
 
 And indeed that's where the first gap in my memory lives, although I'm able to fill it with all kinds of nightmares, and sometimes do. Don't lament small game[fn:: Don't sweat the small stuff. Don't cry over spilled milk.], kids.
 
