--- a/003.org
+++ b/003.org
@@ -306,7 +306,7 @@ And indeed that's where the first gap in my memory lives, although I'm able to f
 
 When I came back around the first time, it was because she was slowing her flight to set me on her perch. It was a scat and bone covered fortress of sorts. It was clear that she[fn:: The male lizard-bird are xxx.] and she alone lived there. It was literally in the clouds so I only had the slightest idea, at least initially, of where I was and what was going on any more than all-finger man away.
 
-I would soon find out. He started eating me at this point.
+She started eating me at this point.
 #+end_quote
 
 The children's only reaction to this was to stare.
