--- a/003.org
+++ b/003.org
@@ -312,7 +312,7 @@ She started eating me at this point.
 The children's only reaction to this was to stare.
 
 #+begin_quote
-Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retaneu of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, he had a marked "hollow face" effect. If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils, following you with their gaze as you move about.], she had mostly free reign over my groin parts.
+Birds naturally go after the softer parts. And since all of my might was tied up in protecting my eyes[fn:: Thag was missing both eyes and had only rather smooth and neat looking skin-lined sockets. Being covered with scars and sometimes-open wounds required lots of thoughtful, tender skin care, of which he got plenty. Most of his eye-socket skin had the look of exquisite kid leather. He had a retaneu of assistants to meet every one of his needs. Modern readers will be interested in noting that, due to the shape of Thag's face, the eyes had a marked "hollow face" effect. If you were not expecting it, and in the right lighting, he sometimes had the look of someone with two enormous pupils, following you with their gaze as you move about.], she had mostly free reign over my groin parts.
 #+end_quote
 
 The children didn't move, especially the boys.
