--- a/003.org
+++ b/003.org
@@ -320,7 +320,7 @@ The children didn't move, especially the boys.
 #+begin_quote
 I switched from protecting my eyes to protecting my groin as fast as I was able, but the bird had every possible advantage over me.
 
-At last I was too exhausted to keep up and she took up /all/ of my parts and then some, squeezed with his mighty beak and pulled. Of course he had flipped me over at this point and was putting new holes in my front half.
+At length I was too exhausted to keep up and she took up /all/ of my parts and then some, squeezed with his mighty beak and pulled. Of course he had flipped me over at this point and was putting new holes in my front half.
 
 For him it truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
