--- a/003.org
+++ b/003.org
@@ -322,7 +322,7 @@ I switched from protecting my eyes to protecting my groin as fast as I was able,
 
 At length I was too exhausted to keep up and upon my surrendering, she took up /all/ of my parts and then some, squeezed with her mighty beak and pulled. Of course she had flipped me over at this point and was putting new holes in my front half.
 
-For him it truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
+For her all this was truly was effortless. The shock and horror I was experiencing at the moment was a kind of protection for me. I don't know how the reflect-soul works, but I can recall no pain at all.
 
 I just remember how effortlessly he tore off what to me was the most important part of my body at the time. It was like the meat had been scored deeply in advance. It just came right off and went down his throat, her making a whole-body bob as he she tossed it down her own throat.
 
