--- a/003.org
+++ b/003.org
@@ -337,7 +337,7 @@ Thag took some time in relishing another of his popular theatrics. He raised his
 
 He completed his circle and made another famous Caveman Thag smile.
 
-Those in the first few rows could see tears coming from the outside of one of his empty, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew they why or when of his tears.
+Those in the first few rows could see tears coming from the outside of one of his empty eye sockets, the only bit of tear duct-work to survive intact. The dripping had little correlation with Thad's mood. No one including himself knew they why or when of his tears.
 
 Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a horribly disfigured, ancient man.
 
