--- a/003.org
+++ b/003.org
@@ -342,7 +342,7 @@ Those in the first few rows could see tears coming from the outside of one of hi
 Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction; a sort of friendly and oddly raptor-like wave, to a perfectly normal child from a horribly disfigured, ancient man.
 
 #+begin_quote
-I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end, I was unable to feel any pain at the time and felt like all this was happening to someone else.
+I had accepted that some time soon, I would fall asleep from all the blood loss and soon after die. It would be peaceful enough an end. I was unable to feel any pain at the time and felt like all this was happening to someone else.
 
 Just then there was a "whoosh" like a cold wave of wind coming down a long, flat slope, along with a slight flash of gray over the whole rocky cliff side. I could tell it was something fast and enormous and of course I was right in guessing that it was another lizard-bird, snake-meal apparent in its middle, wanting to steal a fresh, juicy, living prize away from its tormentor.
 
