--- a/003.org
+++ b/003.org
@@ -350,7 +350,7 @@ I knew it was just making a first pass. This could only improve my situation, bu
 
 That was the only exploratory pass it was to make. In the middle of my hazy awareness on this hazy mountain, I was suddenly flung, like a rock from a sling.
 
-What I think had happened is this fast, competing bird had more or less tackled the one that was in the middle of eating me, causing it to tumble, where it released me on the up swing, mid-tumble.
+What I think had happened is this fast, competing bird had more or less tackled the one that was in the middle of eating me, causing it to tumble, whereupon it released me on the up swing, mid-tumble.
 
 I feel like I floated in the air for palm. When I finally landed, it was with a gentle "puff" rather than a jarring splat like I had expected, though not expected to notice.
 
