--- a/003.org
+++ b/003.org
@@ -362,7 +362,9 @@ The children, knowing a thing or two about cave medicine, gave a tempered cheer,
 #+begin_quote
 No one, my self included could make any kind of meaningful guess as to how long I lay there. I of course was not there to count the suns.
 
-I will say that when I finally got back, /before/ the many moons of rest with the tender care of my made-me mother, I had been gone for all-finger and seven days. The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much in that soggy mass that I drank up moisture through my skin and so did not develop a thirst.
+I will say that when I finally got back, /before/ the many moons of rest with the tender care of my made-me mother, I had been gone for all-finger and seven days. I met a fellow boy from my village and let talked with him briefly the day before the attack. I don't remember meeting him, but he's sure about where in my journey we had met and from that we could deduce the time.
+
+The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much in that soggy mass that I drank up moisture through my skin and so did not develop a thirst.
 
 I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, water or awareness.
 
