--- a/003.org
+++ b/003.org
@@ -364,7 +364,7 @@ No one, my self included could make any kind of meaningful guess as to how long 
 
 I will say that when I finally got back, /before/ the many moons of rest with the tender care of my made-me mother, I had been gone for all-finger and seven days. I met a fellow boy from my village and talked with him briefly the day before the attack. I don't remember meeting him, but he's sure about where in my journey we had met and from that we could deduce the time.
 
-The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much in that soggy mass that I drank up moisture through my skin and so did not develop a thirst.
+The parts that I can remember probably only add up to a few days. I suspect it had just rained and misted so much up there where that soggy mass of moss still lives, that I drank up moisture through my skin and so did not develop a thirst.
 
 I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, water or awareness.
 
