--- a/003.org
+++ b/003.org
@@ -368,7 +368,7 @@ The parts that I can remember probably only add up to a few days. I suspect it h
 
 I had to have been there, slowly recovering in that massive bed of moss for five or seven days, with no food, water or awareness.
 
-And it was cold. Never freezing, but cold. I believe my body was also preserved because the cold slowed down its corruption, like when fresh meat is found early spring.
+And it was cold. Never freezing, but cold. I believe my body was also preserved because the cold slowed down its corruption, like when fresh meat is found under the snow in early spring.
 
 I was just a hopeless husk of a caveman. When I was able to, using only down-power and a lot of wiggling, start my descent, towards what or who, I had no idea. I was existing as a beetle exists[fn:: Not self-aware.]. I was just mindlessly surviving.
 
